k8s/aks/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudvibes-dev
  labels:
    name: cloudvibes-dev
    environment: development
